# py_web_HW08

./: README.md  config.ini  connect.py  consumer.py  main.py  models.py  privat.json  producer.py  pyproject.toml  seeds.py  test.py
pymongo_example/: connect.py  finish_main.py
